--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -8,8 +8,6 @@ nmMode: hardlinks-local
 
 nodeLinker: node-modules
 
-yarnPath: .yarn/releases/yarn-3.6.4.cjs
-
 plugins:
   - path: .yarn/plugins/@yarnpkg/plugin-workspace-tools.cjs
     spec: '@yarnpkg/plugin-workspace-tools'
@@ -17,3 +15,7 @@ plugins:
     spec: '@yarnpkg/plugin-typescript'
   - path: .yarn/plugins/@yarnpkg/plugin-interactive-tools.cjs
     spec: '@yarnpkg/plugin-interactive-tools'
+  - path: .yarn/plugins/@yarnpkg/plugin-version.cjs
+    spec: '@yarnpkg/plugin-version'
+
+yarnPath: .yarn/releases/yarn-3.6.4.cjs
