--- a/examples/jay-4-react/todo/package.json
+++ b/examples/jay-4-react/todo/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "jay-4-react-example-todo-components",
+  "name": "example-jay-4-react-todo-components",
   "version": "1.0.0",
   "type": "module",
   "description": "",
@@ -33,12 +33,12 @@
     "@vitejs/plugin-react": "^4.3.4",
     "jay-cli": "workspace:^",
     "jay-dev-environment": "workspace:^",
+    "jay-vite-plugin": "workspace:^",
     "nodemon": "^3.0.3",
     "rimraf": "^5.0.5",
     "tslib": "^2.6.2",
     "typescript": "^5.3.3",
     "vite": "^5.0.11",
-    "vite-plugin-inspect": "^0.8.1",
-    "vite-plugin-jay": "workspace:^"
+    "vite-plugin-inspect": "^0.8.1"
   }
 }
