--- a/examples/jay-stack/mood-tracker-plugin/package.json
+++ b/examples/jay-stack/mood-tracker-plugin/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "jay-mood-tracker-plugin",
+  "name": "example-jay-mood-tracker-plugin",
   "version": "1.0.0",
   "type": "module",
   "main": "dist/index.js",
@@ -37,12 +37,12 @@
     "@babel/preset-typescript": "^7.23.3",
     "jay-cli": "workspace:^",
     "jay-dev-environment": "workspace:^",
+    "jay-vite-plugin": "workspace:^",
     "nodemon": "^3.0.3",
     "rimraf": "^5.0.5",
     "tslib": "^2.6.2",
     "typescript": "^5.3.3",
     "vite": "^5.0.11",
-    "vite-plugin-inspect": "^0.8.1",
-    "vite-plugin-jay": "workspace:^"
+    "vite-plugin-inspect": "^0.8.1"
   }
 }
