--- a/examples/jay-stack/mood-tracker-plugin/tsconfig.json
+++ b/examples/jay-stack/mood-tracker-plugin/tsconfig.json
@@ -7,7 +7,7 @@
       "jay-reactive": ["../../packages/reactive/lib"],
       "jay-runtime": ["../../packages/runtime/lib"],
       "jay-secure": ["../../packages/secure/lib"],
-      "rollup-plugin-jay": ["../../packages/rollup-plugin-jay/lib"],
+      "jay-rollup-plugin": ["../../packages/rollup-plugin/lib"],
     },
   },
 }
