--- a/examples/jay/mini-benchmark/package.json
+++ b/examples/jay/mini-benchmark/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "jay-example-mini-benchmark",
+  "name": "example-jay-mini-benchmark",
   "version": "1.0.0",
   "type": "module",
   "description": "",
@@ -30,13 +30,13 @@
     "@types/shelljs": "^0.8.15",
     "jay-cli": "workspace:^",
     "jay-dev-environment": "workspace:^",
+    "jay-vite-plugin": "workspace:^",
     "nodemon": "^3.0.3",
     "npm-run-all2": "^6.1.1",
     "rimraf": "^5.0.5",
     "tslib": "^2.6.2",
     "typescript": "^5.3.3",
     "vite": "^5.0.11",
-    "vite-plugin-inspect": "^0.8.1",
-    "vite-plugin-jay": "workspace:^"
+    "vite-plugin-inspect": "^0.8.1"
   }
 }
