--- a/examples/jay/scrum-board/package.json
+++ b/examples/jay/scrum-board/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "jay-example-scrum-board",
+  "name": "example-jay-scrum-board",
   "version": "1.0.0",
   "type": "module",
   "description": "",
@@ -28,12 +28,12 @@
     "@rollup/plugin-node-resolve": "^15.2.3",
     "jay-cli": "workspace:^",
     "jay-dev-environment": "workspace:^",
+    "jay-vite-plugin": "workspace:^",
     "nodemon": "^3.0.3",
     "rimraf": "^5.0.5",
     "tslib": "^2.6.2",
     "typescript": "^5.3.3",
     "vite": "^5.0.11",
-    "vite-plugin-inspect": "^0.8.1",
-    "vite-plugin-jay": "workspace:^"
+    "vite-plugin-inspect": "^0.8.1"
   }
 }
