--- a/examples/jay/todo-rollup-build/package.json
+++ b/examples/jay/todo-rollup-build/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "jay-example-todo-components-rollup",
+  "name": "example-jay-todo-components-rollup",
   "version": "1.0.0",
   "type": "module",
   "description": "",
@@ -29,10 +29,10 @@
     "@rollup/plugin-node-resolve": "^15.2.3",
     "jay-cli": "workspace:^",
     "jay-dev-environment": "workspace:^",
+    "jay-rollup-plugin": "workspace:^",
     "rimraf": "^5.0.5",
     "rollup": "^4.9.5",
     "rollup-plugin-copy": "^3.5.0",
-    "rollup-plugin-jay": "workspace:^",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-typescript2": "^0.36.0",
     "tslib": "^2.6.2",
