--- a/examples/jay/todo-rollup-build/tsconfig.json
+++ b/examples/jay/todo-rollup-build/tsconfig.json
@@ -9,7 +9,7 @@
       "jay-runtime": ["../../packages/runtime/lib"],
       "jay-secure": ["../../packages/secure/lib"],
       "jay-serialization": ["../../packages/serialization/lib"],
-      "rollup-plugin-jay": ["../../packages/rollup-plugin-jay/lib"],
+      "jay-rollup-plugin": ["../../packages/rollup-plugin/lib"],
     },
   },
   "exclude": ["node_modules", "dist", "dist-secure", "build"],
