update dependencies to clear yarn install peer dependency warnings

--- a/packages/runtime/jay-4-react/package.json
+++ b/packages/runtime/jay-4-react/package.json
@@ -15,6 +15,7 @@
     "test:watch": "vitest"
   },
   "dependencies": {
+    "@testing-library/dom": "^10.4.0",
     "jay-component": "workspace:^",
     "jay-json-patch": "workspace:^",
     "jay-reactive": "workspace:^",
