--- a/examples/jay/todo-rollup-build/package.json
+++ b/examples/jay/todo-rollup-build/package.json
@@ -27,13 +27,13 @@
     "@babel/preset-env": "^7.23.8",
     "@babel/preset-typescript": "^7.23.3",
     "@rollup/plugin-node-resolve": "^15.2.3",
-    "@rollup/plugin-terser": "^0.4.4",
     "jay-cli": "workspace:^",
     "jay-dev-environment": "workspace:^",
     "jay-rollup-plugin": "workspace:^",
     "rimraf": "^5.0.5",
     "rollup": "^4.9.5",
     "rollup-plugin-copy": "^3.5.0",
+    "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-typescript2": "^0.36.0",
     "tslib": "^2.6.2",
     "typescript": "^5.3.3",
