--- a/examples/jay-context/scrum-board-with-context/package.json
+++ b/examples/jay-context/scrum-board-with-context/package.json
@@ -4,6 +4,7 @@
   "type": "module",
   "description": "",
   "private": true,
+  "license": "Apache-2.0",
   "scripts": {
     "definitions": "jay-cli definitions ./lib",
     "clean": "rimraf dist && rimraf build && rimraf -g 'lib/**/*.d.ts'",
