--- a/examples/jay/large-number-of-components/package.json
+++ b/examples/jay/large-number-of-components/package.json
@@ -4,6 +4,7 @@
   "type": "module",
   "description": "",
   "private": true,
+  "license": "Apache-2.0",
   "scripts": {
     "build": "npm run definitions && npm run build:js",
     "definitions": "jay-cli definitions src",
