--- a/examples/jay/timer/package.json
+++ b/examples/jay/timer/package.json
@@ -4,6 +4,7 @@
   "type": "module",
   "description": "",
   "private": true,
+  "license": "Apache-2.0",
   "scripts": {
     "serve": "node_modules/.bin/vite",
     "definitions": "jay-cli definitions ./lib",
