--- a/packages/compiler/compiler-jay-html/package.json
+++ b/packages/compiler/compiler-jay-html/package.json
@@ -2,6 +2,7 @@
   "name": "jay-compiler-jay-html",
   "version": "0.5.0",
   "description": "",
+  "license": "Apache-2.0",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "directories": {
@@ -20,7 +21,6 @@
     "test:watch": "vitest"
   },
   "author": "",
-  "license": "ISC",
   "dependencies": {
     "@types/js-yaml": "^4.0.9",
     "change-case": "^4.1.2",
