--- a/packages/compiler/compiler-shared/package.json
+++ b/packages/compiler/compiler-shared/package.json
@@ -2,6 +2,7 @@
   "name": "jay-compiler-shared",
   "version": "0.5.0",
   "description": "",
+  "license": "Apache-2.0",
   "main": "dist/index.js",
   "directories": {
     "lib": "lib"
@@ -18,7 +19,6 @@
     "test:watch": "vitest"
   },
   "author": "",
-  "license": "ISC",
   "dependencies": {
     "@types/js-yaml": "^4.0.9",
     "change-case": "^4.1.2",
