--- a/packages/compiler/rollup-plugin/package.json
+++ b/packages/compiler/rollup-plugin/package.json
@@ -1,6 +1,7 @@
 {
   "name": "jay-rollup-plugin",
   "version": "0.5.0",
+  "license": "Apache-2.0",
   "main": "dist/index.js",
   "keywords": [
     "jay",
