--- a/packages/jay-stack/route-scanner/package.json
+++ b/packages/jay-stack/route-scanner/package.json
@@ -1,6 +1,7 @@
 {
   "name": "jay-stack-route-scanner",
   "version": "0.5.0",
+  "license": "Apache-2.0",
   "main": "dist/index.js",
   "types": "dist/index.d.mts",
   "scripts": {
