--- a/packages/jay-stack/stack-cli/package.json
+++ b/packages/jay-stack/stack-cli/package.json
@@ -1,6 +1,7 @@
 {
   "name": "jay-stack-cli",
   "version": "0.5.0",
+  "license": "Apache-2.0",
   "main": "dist/index.js",
   "bin": "dist/index.js",
   "scripts": {
