--- a/packages/jay-stack/stack-client-runtime/package.json
+++ b/packages/jay-stack/stack-client-runtime/package.json
@@ -2,6 +2,7 @@
   "name": "jay-stack-client-runtime",
   "version": "0.5.0",
   "type": "module",
+  "license": "Apache-2.0",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "exports": {
