--- a/packages/jay-stack/stack-server-runtime/package.json
+++ b/packages/jay-stack/stack-server-runtime/package.json
@@ -1,6 +1,7 @@
 {
   "name": "jay-stack-server-runtime",
   "version": "0.5.0",
+  "license": "Apache-2.0",
   "main": "dist/index.js",
   "types": "dist/index.d.mts",
   "directories": {
