--- a/packages/runtime/reactive/package.json
+++ b/packages/runtime/reactive/package.json
@@ -2,6 +2,7 @@
   "name": "jay-reactive",
   "version": "0.5.0",
   "type": "module",
+  "license": "Apache-2.0",
   "main": "dist/index.js",
   "exports": {
     ".": "./dist/index.js",
