--- a/packages/runtime/runtime/package.json
+++ b/packages/runtime/runtime/package.json
@@ -2,6 +2,7 @@
   "name": "jay-runtime",
   "version": "0.5.0",
   "type": "module",
+  "license": "Apache-2.0",
   "main": "dist/index.js",
   "scripts": {
     "build": "npm run build:js && npm run build:types && npm run build:fix-dts",
