--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "license": "Apache-2.0",
   "scripts": {
     "build": "wsrun -te --report build",
-    "build:check-types": "wsrun -p 'jay-*' -e --prefix build:check-types",
-    "build:watch": "wsrun -p 'jay-*' --prefix build:watch",
+    "build:check-types": "wsrun -p '@jay-framework/*' -e --prefix build:check-types",
+    "build:watch": "wsrun -p '@jay-framework/*' --prefix build:watch",
     "clean": "wsrun clean",
     "clean:node_modules": "rimraf node_modules && rimraf packages/*/node_modules && rimraf examples/*/node_modules && rimraf exploration/*/node_modules",
     "clean:node_modules:with-cache": "npm run clean:node_modules && yarn cache clean",
