set the files directive for package.json

--- a/packages/compiler/compiler-jay-html/package.json
+++ b/packages/compiler/compiler-jay-html/package.json
@@ -8,6 +8,11 @@
   "directories": {
     "lib": "lib"
   },
+  "files": [
+    "dist",
+    "docs",
+    "readme.md"
+  ],
   "scripts": {
     "build": "npm run build:pegjs && npm run build:js && npm run build:types",
     "build:watch": "npm run build:js -- --watch & npm run build:types -- --watch",
