--- a/packages/compiler/rollup-plugin/package.json
+++ b/packages/compiler/rollup-plugin/package.json
@@ -8,6 +8,10 @@
     "secure",
     "rollup-plugin"
   ],
+  "files": [
+    "dist",
+    "readme.md"
+  ],
   "scripts": {
     "build": "npm run build:js && npm run build:types",
     "build:watch": "npm run build:js -- --watch & npm run build:types -- --watch",
