--- a/packages/compiler/cli/package.json
+++ b/packages/compiler/cli/package.json
@@ -4,6 +4,10 @@
   "license": "Apache-2.0",
   "main": "dist/index.js",
   "bin": "dist/index.js",
+  "files": [
+    "dist",
+    "readme.md"
+  ],
   "scripts": {
     "build": "npm run build:cli-link && npm run build:js",
     "build:watch": "npm run build:cli-link && npm run build:js -- --watch",
