--- a/packages/jay-stack/route-scanner/package.json
+++ b/packages/jay-stack/route-scanner/package.json
@@ -4,6 +4,10 @@
   "license": "Apache-2.0",
   "main": "dist/index.js",
   "types": "dist/index.d.mts",
+  "files": [
+    "dist",
+    "readme.md"
+  ],
   "scripts": {
     "build": "npm run build:js && npm run build:types",
     "build:watch": "npm run build:js -- --watch & npm run build:types -- --watch",
