--- a/packages/jay-stack/stack-client-runtime/package.json
+++ b/packages/jay-stack/stack-client-runtime/package.json
@@ -11,6 +11,10 @@
       "require": "./dist/index.cjs"
     }
   },
+  "files": [
+    "dist",
+    "readme.md"
+  ],
   "scripts": {
     "build": "npm run build:js && npm run build:types",
     "build:watch": "npm run build:js -- --watch & npm run build:types -- --watch",
