--- a/packages/runtime/component/package.json
+++ b/packages/runtime/component/package.json
@@ -4,6 +4,11 @@
   "type": "module",
   "license": "Apache-2.0",
   "main": "dist/index.js",
+  "files": [
+    "dist",
+    "docs",
+    "readme.md"
+  ],
   "scripts": {
     "build": "npm run build:js && npm run build:types",
     "build:watch": "npm run build:js -- --watch & npm run build:types -- --watch",
