--- a/packages/runtime/reactive/package.json
+++ b/packages/runtime/reactive/package.json
@@ -8,6 +8,10 @@
     ".": "./dist/index.js",
     "./tracing": "./dist/tracing.js"
   },
+  "files": [
+    "dist",
+    "readme.md"
+  ],
   "scripts": {
     "build": "npm run build:js && npm run build:types",
     "build:watch": "npm run build:js -- --watch & npm run build:types -- --watch",
@@ -19,9 +23,6 @@
     "test": "vitest run",
     "test:watch": "vitest"
   },
-  "files": [
-    "dist"
-  ],
   "devDependencies": {
     "@jay-framework/dev-environment": "workspace:^",
     "@types/node": "^20.11.5",
