--- a/package.json
+++ b/package.json
@@ -18,10 +18,10 @@
     "rebuild": "yarn run clean && yarn run build",
     "reinstall": "npm run clean:node_modules && yarn install && yarn run rebuild",
     "test": "wsrun -te --report test",
-    "publish": "yarn workspaces foreach --no-private exec \"npm publish --access public\"",
-    "version:packages:patch": "wsrun -p 'jay-*' -s -e --report --prefix version patch --deferred && yarn version apply --all",
-    "version:packages:minor": "wsrun -p 'jay-*' -s -e --report --prefix version minor --deferred && yarn version apply --all",
-    "version:packages:major": "wsrun -p 'jay-*' -s -e --report --prefix version major --deferred && yarn version apply --all"
+    "version:packages:patch": "wsrun -p '@jay-framework/*' -s -e --report --prefix version patch --deferred && yarn version apply --all",
+    "version:packages:minor": "wsrun -p '@jay-framework/*' -s -e --report --prefix version minor --deferred && yarn version apply --all",
+    "version:packages:major": "wsrun -p '@jay-framework/*' -s -e --report --prefix version major --deferred && yarn version apply --all",
+    "publish": "yarn workspaces foreach --no-private exec \"yarn npm publish --access public\""
   },
   "packageManager": "yarn@3.6.4",
   "workspaces": {
