--- a/packages/compiler/compiler-shared/package.json
+++ b/packages/compiler/compiler-shared/package.json
@@ -34,6 +34,7 @@
     "node-html-parser": "^6.1.12",
     "pegjs": "^0.10.0",
     "pluralize": "^8.0.0",
+    "prettier": "^3.6.2",
     "typescript": "^5.3.3"
   },
   "devDependencies": {
