--- a/packages/runtime/runtime/package.json
+++ b/packages/runtime/runtime/package.json
@@ -24,14 +24,14 @@
   },
   "dependencies": {
     "@jay-framework/list-compare": "workspace:^",
-    "@jay-framework/reactive": "workspace:^",
-    "jsdom": "^23.2.0"
+    "@jay-framework/reactive": "workspace:^"
   },
   "devDependencies": {
     "@jay-framework/dev-environment": "workspace:^",
     "@testing-library/jest-dom": "^6.2.0",
     "@types/jsdom": "^21.1.6",
     "@types/node": "^20.11.5",
+    "jsdom": "^23.2.0",
     "nodemon": "^3.0.3",
     "replace-in-file": "^7.1.0",
     "rimraf": "^5.0.5",
