--- a/packages/jay-stack/editor-protocol/package.json
+++ b/packages/jay-stack/editor-protocol/package.json
@@ -23,8 +23,8 @@
     "build:check-types": "tsc",
     "clean": "rimraf dist",
     "confirm": "npm run clean && npm run build && npm run build:check-types && npm run test",
-    "test": "vitest run",
-    "test:watch": "vitest"
+    "test": ":",
+    "test:watch": ":"
   },
   "devDependencies": {
     "@jay-framework/dev-environment": "workspace:^",
