prettier + readme + types refinement

--- a/packages/jay-stack/editor-client/tsconfig.json
+++ b/packages/jay-stack/editor-client/tsconfig.json
@@ -3,7 +3,7 @@
   "compilerOptions": {
     "outDir": "dist",
     "paths": {
-      "@jay-framework/editor-protocol": ["../editor-protocol/lib"]
-    }
-  }
-} 
+      "@jay-framework/editor-protocol": ["../editor-protocol/lib"],
+    },
+  },
+}
