--- a/packages/jay-stack/editor-protocol/tsconfig.json
+++ b/packages/jay-stack/editor-protocol/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "extends": "@jay-framework/dev-environment/library/tsconfig.json",
   "compilerOptions": {
-    "outDir": "dist"
-  }
-} 
+    "outDir": "dist",
+  },
+}
