--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "version:packages:patch": "wsrun -p '@jay-framework/*' -s -e --report --prefix version patch --deferred && yarn version apply --all",
     "version:packages:minor": "wsrun -p '@jay-framework/*' -s -e --report --prefix version minor --deferred && yarn version apply --all",
     "version:packages:major": "wsrun -p '@jay-framework/*' -s -e --report --prefix version major --deferred && yarn version apply --all",
-    "publish": "yarn workspaces foreach --no-private exec \"yarn npm publish --access public\""
+    "publish": "node scripts/publish.js",
+    "publish:interactive": "yarn workspaces foreach --no-private exec \"yarn npm publish --access public\"",
+    "publish:manual": "yarn workspaces foreach --no-private exec \"yarn npm publish --access public --otp ${NPM_OTP}\""
   },
   "packageManager": "yarn@3.6.4",
   "workspaces": {
