updated the editorId logic in dev-server, to persist automatically once connected

--- a/packages/jay-stack/stack-cli/.jay.example
+++ b/packages/jay-stack/stack-cli/.jay.example
@@ -1,4 +1,5 @@
 devServer:
   portRange: [3000, 3100]
 editorServer:
-  portRange: [3101, 3200] 
+  portRange: [3101, 3200]
+  # editorId will be automatically set when an editor connects 
