--- a/packages/jay-stack/editor-server/package.json
+++ b/packages/jay-stack/editor-server/package.json
@@ -3,7 +3,7 @@
   "version": "0.6.0",
   "type": "module",
   "license": "Apache-2.0",
-  "main": "dist/index.cjs",
+  "main": "dist/index.js",
   "files": [
     "dist",
     "readme.md"
