--- a/packages/jay-stack/stack-cli/package.json
+++ b/packages/jay-stack/stack-cli/package.json
@@ -2,6 +2,7 @@
   "name": "@jay-framework/jay-stack-cli",
   "version": "0.6.0",
   "license": "Apache-2.0",
+  "type": "module",
   "main": "dist/index.js",
   "bin": "dist/index.js",
   "files": [
@@ -25,7 +26,6 @@
     "@jay-framework/dev-server": "workspace:^",
     "@jay-framework/editor-server": "workspace:^",
     "express": "^5.0.1",
-    "get-port": "^7.0.0",
     "vite": "^5.0.11"
   },
   "devDependencies": {
