set publish to parallel

--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "version:packages:minor": "wsrun -p '@jay-framework/*' -s -e --report --prefix version minor --deferred && yarn version apply --all",
     "version:packages:major": "wsrun -p '@jay-framework/*' -s -e --report --prefix version major --deferred && yarn version apply --all",
     "publish": "node scripts/publish.js",
-    "publish:interactive": "yarn workspaces foreach --no-private exec \"yarn npm publish --access public\"",
-    "publish:manual": "yarn workspaces foreach --no-private exec \"yarn npm publish --access public --otp ${NPM_OTP}\""
+    "publish:interactive": "yarn workspaces foreach -p --no-private exec \"yarn npm publish --access public\"",
+    "publish:manual": "yarn workspaces foreach -p --no-private exec \"yarn npm publish --access public --otp ${NPM_OTP}\""
   },
   "packageManager": "yarn@3.6.4",
   "workspaces": {
