--- a/packages/compiler/compiler-jay-html/package.json
+++ b/packages/compiler/compiler-jay-html/package.json
@@ -13,6 +13,13 @@
     "docs",
     "readme.md"
   ],
+  "exports": {
+    ".": {
+      "import": "./dist/index.js",
+      "types": "./dist/index.d.ts"
+    }
+  },
+  "type": "module",
   "scripts": {
     "build": "npm run build:pegjs && npm run build:js && npm run build:types",
     "build:watch": "npm run build:js -- --watch & npm run build:types -- --watch",
