--- a/packages/compiler/compiler-analyze-exported-types/package.json
+++ b/packages/compiler/compiler-analyze-exported-types/package.json
@@ -3,7 +3,14 @@
   "version": "0.6.7",
   "description": "",
   "license": "Apache-2.0",
+  "type": "module",
   "main": "dist/index.js",
+  "exports": {
+    ".": {
+      "import": "./dist/index.js",
+      "types": "./dist/index.d.ts"
+    }
+  },
   "directories": {
     "lib": "lib"
   },
