--- a/packages/compiler/rollup-plugin/package.json
+++ b/packages/compiler/rollup-plugin/package.json
@@ -17,7 +17,7 @@
     "build:watch": "npm run build:js -- --watch & npm run build:types -- --watch",
     "build:watch:sandbox-counter": "vite -c test/jayRuntime/fixtures/counter/source/vite.config.ts",
     "build:js": "vite build",
-    "build:types": "tsup lib/index.ts --dts-only --format cjs",
+    "build:types": "tsup lib/index.ts --dts-only --format esm",
     "build:check-types": "tsc",
     "build:executable-bin": "chmod +x dist/index.js",
     "clean": "rimraf dist && rimraf test/jayRuntime/fixtures/counter/dist && rimraf test/jayRuntime/fixtures/exec/dist",
