--- a/packages/compiler/cli/package.json
+++ b/packages/compiler/cli/package.json
@@ -25,6 +25,7 @@
     "@jay-framework/rollup-plugin": "workspace:^",
     "chalk": "^4.1.2",
     "commander": "^14.0.0",
+    "glob": "^10.4.5",
     "rollup": "^4.9.5"
   },
   "devDependencies": {
