--- a/examples/jay/tree-recursive/tsconfig.json
+++ b/examples/jay/tree-recursive/tsconfig.json
@@ -1,6 +1,5 @@
 {
-    "extends": "../../../dev-environment/examples/tsconfig.json",
-    "include": ["lib/**/*"],
-    "exclude": ["node_modules"]
+  "extends": "../../../dev-environment/examples/tsconfig.json",
+  "include": ["lib/**/*"],
+  "exclude": ["node_modules"],
 }
-
