--- a/packages/compiler/compiler-jay-stack/package.json
+++ b/packages/compiler/compiler-jay-stack/package.json
@@ -1,12 +1,19 @@
 {
-  "name": "@jay-framework/dev-server",
+  "name": "@jay-framework/compiler-jay-stack",
   "version": "0.8.0",
   "type": "module",
   "license": "Apache-2.0",
   "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "exports": {
+    ".": {
+      "import": "./dist/index.js",
+      "types": "./dist/index.d.ts"
+    }
+  },
   "files": [
     "dist",
-    "readme.md"
+    "README.md"
   ],
   "scripts": {
     "build": "npm run build:js && npm run build:types",
@@ -14,32 +21,19 @@
     "build:js": "vite build",
     "build:types": "tsup lib/index.ts --dts-only --format esm",
     "build:check-types": "tsc",
-    "test-definitions": "jay-cli definitions test",
-    "test-runtime": "jay-cli runtime test",
     "clean": "rimraf dist",
     "confirm": "npm run clean && npm run build && npm run build:check-types && npm run test",
     "test": "vitest run",
     "test:watch": "vitest"
   },
   "dependencies": {
-    "@jay-framework/compiler-jay-stack": "workspace:^",
-    "@jay-framework/compiler-shared": "workspace:^",
-    "@jay-framework/component": "workspace:^",
-    "@jay-framework/fullstack-component": "workspace:^",
-    "@jay-framework/runtime": "workspace:^",
-    "@jay-framework/stack-client-runtime": "workspace:^",
-    "@jay-framework/stack-route-scanner": "workspace:^",
-    "@jay-framework/stack-server-runtime": "workspace:^",
+    "@jay-framework/compiler": "workspace:^",
+    "@jay-framework/typescript-bridge": "workspace:^",
+    "@jay-framework/vite-plugin": "workspace:^",
     "vite": "^5.0.11"
   },
   "devDependencies": {
     "@jay-framework/dev-environment": "workspace:^",
-    "@jay-framework/jay-cli": "workspace:^",
-    "@jay-framework/stack-client-runtime": "workspace:^",
-    "@types/express": "^5.0.2",
-    "@types/node": "^22.15.21",
-    "nodemon": "^3.0.3",
-    "replace-in-file": "^7.1.0",
     "rimraf": "^5.0.5",
     "tsup": "^8.0.1",
     "typescript": "^5.3.3",
