fixes to multiple packages with added parameter to parseJayFile and fixes to dev server

--- a/packages/jay-stack/plugin-validator/package.json
+++ b/packages/jay-stack/plugin-validator/package.json
@@ -21,8 +21,8 @@
     "build:check-types": "tsc",
     "clean": "rimraf dist",
     "confirm": "npm run clean && npm run build && npm run build:check-types && npm run test",
-    "test": "vitest run",
-    "test:watch": "vitest"
+    "test": ":",
+    "test:watch": ":"
   },
   "dependencies": {
     "@jay-framework/compiler-jay-html": "workspace:^",
