--- a/examples/jay-stack/mood-tracker-plugin/plugin.yaml
+++ b/examples/jay-stack/mood-tracker-plugin/plugin.yaml
@@ -1,7 +1,7 @@
 name: mood-tracker-plugin
-module: dist/index.js
+# module field omitted for NPM packages - will use package's main export (".")
 contracts:
   - name: mood-tracker
-    contract: dist/mood-tracker.jay-contract
-    component: dist/index
+    contract: mood-tracker.jay-contract  # Export subpath (matches package.json exports key)
+    component: moodTracker # Exported full stack component in index.ts
     description: A mood tracker component with happy, neutral, and sad states
