wrong format of component field in test plugin.yaml

--- a/packages/jay-stack/dev-server/test/page-with-headless/src/plugins/test-headless/plugin.yaml
+++ b/packages/jay-stack/dev-server/test/page-with-headless/src/plugins/test-headless/plugin.yaml
@@ -1,6 +1,7 @@
 name: test-headless
+module: ../../../headless-component
 contracts:
   - name: headless
     contract: ../../../headless-component.jay-contract
-    component: ../../../headless-component
+    component: headless
     description: Test headless component
