first implementation of extracting view state merge

--- a/packages/jay-stack/stack-client-runtime/package.json
+++ b/packages/jay-stack/stack-client-runtime/package.json
@@ -29,7 +29,8 @@
   "dependencies": {
     "@jay-framework/component": "workspace:^",
     "@jay-framework/fullstack-component": "workspace:^",
-    "@jay-framework/runtime": "workspace:^"
+    "@jay-framework/runtime": "workspace:^",
+    "@jay-framework/view-state-merge": "workspace:^"
   },
   "devDependencies": {
     "@jay-framework/dev-environment": "workspace:^",
