--- a/packages/jay-stack/stack-server-runtime/package.json
+++ b/packages/jay-stack/stack-server-runtime/package.json
@@ -30,7 +30,8 @@
     "@jay-framework/component": "workspace:^",
     "@jay-framework/fullstack-component": "workspace:^",
     "@jay-framework/runtime": "workspace:^",
-    "@jay-framework/stack-route-scanner": "workspace:^"
+    "@jay-framework/stack-route-scanner": "workspace:^",
+    "@jay-framework/view-state-merge": "workspace:^"
   },
   "devDependencies": {
     "@jay-framework/dev-environment": "workspace:^",
