--- a/packages/jay-stack/stack-server-runtime/package.json
+++ b/packages/jay-stack/stack-server-runtime/package.json
@@ -27,6 +27,7 @@
   },
   "dependencies": {
     "@jay-framework/compiler-jay-html": "workspace:^",
+    "@jay-framework/compiler-shared": "workspace:^",
     "@jay-framework/component": "workspace:^",
     "@jay-framework/fullstack-component": "workspace:^",
     "@jay-framework/runtime": "workspace:^",
