--- a/examples/jay-stack/mood-tracker-plugin/plugin.yaml
+++ b/examples/jay-stack/mood-tracker-plugin/plugin.yaml
@@ -5,3 +5,9 @@ contracts:
     contract: mood-tracker.jay-contract # Export subpath (matches package.json exports key)
     component: moodTracker # Exported full stack component in index.ts
     description: A mood tracker component with happy, neutral, and sad states
+
+# Actions exported from this plugin (named exports from main module)
+actions:
+  - submitMood
+  - getMoodStats
+  - clearMoodHistory
