Change the protocol.ts types to re-use compiler types - ensure source of truth for the types system

--- a/packages/jay-stack/editor-protocol/package.json
+++ b/packages/jay-stack/editor-protocol/package.json
@@ -24,6 +24,7 @@
     "test:watch": ":"
   },
   "devDependencies": {
+    "@jay-framework/compiler-jay-html": "workspace:^",
     "@jay-framework/dev-environment": "workspace:^",
     "@jay-framework/jay-cli": "workspace:^",
     "@types/node": "^22.15.21",
