moving to unified API for client server init

--- a/examples/jay-stack/fake-shop/src/plugins/product-rating/plugin.yaml
+++ b/examples/jay-stack/fake-shop/src/plugins/product-rating/plugin.yaml
@@ -8,3 +8,4 @@ contracts:
 actions:
   - submitRating
   - getRatings
+# Plugin initialization - auto-discovered from init.ts using makeJayInit pattern
