--- a/examples/jay-stack/mood-tracker-plugin/package.json
+++ b/examples/jay-stack/mood-tracker-plugin/package.json
@@ -33,7 +33,9 @@
     "@jay-framework/component": "workspace:^",
     "@jay-framework/fullstack-component": "workspace:^",
     "@jay-framework/reactive": "workspace:^",
-    "@jay-framework/runtime": "workspace:^"
+    "@jay-framework/runtime": "workspace:^",
+    "@jay-framework/stack-server-runtime": "workspace:^",
+    "@jay-framework/stack-client-runtime": "workspace:^"
   },
   "devDependencies": {
     "@babel/core": "^7.23.7",
