--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
     "confirm": "npm run rebuild && npm run build:check-types && npm run test && npm run format",
     "deps:upgrade": "yarn upgrade-interactive && yarn && yarn deduplicate",
     "deduplicate": "yarn dedupe --strategy highest",
-    "format": "npm run format:extensions && npm run format:prettier",
+    "format": "npm run format:extensions && npm run format:prettier && npm run format:newlines",
     "format:extensions": "node ./scripts/fix-imports-ts-extension.js",
     "format:prettier": "prettier . --write",
+    "format:newlines": "node ./scripts/fix-trailing-newlines.js",
     "rebuild": "yarn run clean && yarn run build",
     "reinstall": "npm run clean:node_modules && yarn install && yarn run rebuild",
     "test": "wsrun -te --report test",
