--- a/examples/jay/cart-automation/tsconfig.json
+++ b/examples/jay/cart-automation/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "extends": "@jay-framework/dev-environment/library-dom/tsconfig.json",
   "compilerOptions": {
-    "outDir": "dist"
-  }
+    "outDir": "dist",
+  },
 }
