added support for passing slow view state to the client when needed and using deep merge to create the final view state

--- a/packages/runtime/runtime-automation/package.json
+++ b/packages/runtime/runtime-automation/package.json
@@ -21,7 +21,8 @@
     "test:watch": "vitest"
   },
   "dependencies": {
-    "@jay-framework/runtime": "workspace:^"
+    "@jay-framework/runtime": "workspace:^",
+    "@jay-framework/view-state-merge": "workspace:^"
   },
   "devDependencies": {
     "@jay-framework/component": "workspace:^",
