--- a/packages/compiler/cli/package.json
+++ b/packages/compiler/cli/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@jay-framework/compiler": "workspace:^",
+    "@jay-framework/logger": "workspace:^",
     "@jay-framework/rollup-plugin": "workspace:^",
     "chalk": "^4.1.2",
     "commander": "^14.0.0",
