--- a/packages/jay-stack/logger/package.json
+++ b/packages/jay-stack/logger/package.json
@@ -1,19 +1,11 @@
 {
-  "name": "@jay-framework/compiler-jay-stack",
+  "name": "@jay-framework/logger",
   "version": "0.11.0",
-  "type": "module",
   "license": "Apache-2.0",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
-  "exports": {
-    ".": {
-      "import": "./dist/index.js",
-      "types": "./dist/index.d.ts"
-    }
-  },
+  "main": "dist/index.mjs",
+  "types": "dist/index.d.mts",
   "files": [
-    "dist",
-    "README.md"
+    "dist"
   ],
   "scripts": {
     "build": "npm run build:js && npm run build:types",
@@ -26,19 +18,13 @@
     "test": "vitest run",
     "test:watch": "vitest"
   },
-  "dependencies": {
-    "@jay-framework/compiler": "workspace:^",
-    "@jay-framework/compiler-shared": "workspace:^",
-    "@jay-framework/logger": "workspace:^",
-    "@jay-framework/typescript-bridge": "workspace:^",
-    "@jay-framework/vite-plugin": "workspace:^",
-    "typescript": "^5.3.3",
-    "vite": "^5.0.11"
-  },
   "devDependencies": {
     "@jay-framework/dev-environment": "workspace:^",
+    "@types/node": "^20.11.5",
     "rimraf": "^5.0.5",
     "tsup": "^8.0.1",
+    "typescript": "^5.3.3",
+    "vite": "^5.0.11",
     "vitest": "^1.2.1"
   }
 }
