--- a/packages/jay-stack/stack-server-runtime/package.json
+++ b/packages/jay-stack/stack-server-runtime/package.json
@@ -30,6 +30,7 @@
     "@jay-framework/compiler-shared": "workspace:^",
     "@jay-framework/component": "workspace:^",
     "@jay-framework/fullstack-component": "workspace:^",
+    "@jay-framework/logger": "workspace:^",
     "@jay-framework/runtime": "workspace:^",
     "@jay-framework/stack-route-scanner": "workspace:^",
     "@jay-framework/view-state-merge": "workspace:^",
