--- a/packages/jay-stack/route-scanner/package.json
+++ b/packages/jay-stack/route-scanner/package.json
@@ -8,6 +8,9 @@
     "dist",
     "readme.md"
   ],
+  "dependencies": {
+    "@jay-framework/logger": "workspace:^"
+  },
   "scripts": {
     "build": "npm run build:js && npm run build:types",
     "build:watch": "npm run build:js -- --watch & npm run build:types -- --watch",
