--- a/packages/jay-stack/editor-client/package.json
+++ b/packages/jay-stack/editor-client/package.json
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "@jay-framework/editor-protocol": "workspace:^",
+    "@jay-framework/logger": "workspace:^",
     "get-port": "^7.0.0",
     "socket.io-client": "^4.7.4",
     "uuid": "^9.0.1"
