design log 85 - implementing agent-kit phase 1

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@ node_modules
 dist
 dist-secure
 build
+agent-kit
 *.iml
 /packages/compiler/compiler/lib/expressions/expression-parser.js
 examples/**/*.d.ts
