first iteration of developemnt

--- a/examples/jay-stack/fake-shop/package.json
+++ b/examples/jay-stack/fake-shop/package.json
@@ -25,6 +25,7 @@
     "@jay-framework/runtime": "workspace:^",
     "@jay-framework/stack-client-runtime": "workspace:^",
     "@jay-framework/stack-server-runtime": "workspace:^",
+    "@jay-framework/webmcp-plugin": "workspace:^",
     "compression": "^1.7.5",
     "example-jay-mood-tracker-plugin": "workspace:^",
     "express": "^5.0.1",
